--- a/fly.toml
+++ b/fly.toml
@@ -14,10 +14,10 @@ kill_signal = 'SIGTERM'
 
 [env]
   PHX_HOST = 'premiere-ecoute.fly.dev'
-  PORT = '8080'
+  PORT = '4000'
 
 [http_service]
-  internal_port = 8080
+  internal_port = 4000
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
@@ -33,3 +33,7 @@ kill_signal = 'SIGTERM'
   memory = '512mb'
   cpu_kind = 'shared'
   cpus = 1
+
+[metrics]
+  port = 4000
+  path = "/metrics"
