--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -16,7 +16,8 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.maxime.janvier.premiereecoute"
     },
     "web": {
       "bundler": "metro",
