--- a/apps/db/fly.toml
+++ b/apps/db/fly.toml
@@ -23,6 +23,7 @@ primary_region = 'cdg'
   internal_port = 5432
   auto_start_machines = true
   auto_stop_machines = true
+  min_machines_running = 1
 
   [[services.ports]]
     port = 5432
