# Add Billboard feature and improve Fly.io deployment configuration
Introduces the Billboard feature for playlist analysis from popular music platforms, along with deployment improvements for better health checks and load balancing on Fly.io.

## Features

- Billboard playlist analysis supporting Spotify and Deezer sources
- Interactive progress tracking during playlist processing
- Localization support with flag icons for multiple languages

## Improvements

- Enhanced Fly.io configuration with proper health checks and load balancing
- Disabled Grafana integration for production deployment
- Updated font assets with Bricolage Grotesque typography
- Code cleanup and refactoring in playlist processing logic

--- a/fly.toml
+++ b/fly.toml
@@ -18,11 +18,16 @@ kill_signal = 'SIGTERM'
 
 [http_service]
   internal_port = 4000
-  force_https = true
-  auto_stop_machines = "stop"
-  auto_start_machines = true
+  auto_stop_machines = "off"
   min_machines_running = 1
   processes = ['app']
+  
+  [[services.ports]]
+    handlers = ["http"]
+    port = 80
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = 443
 
   [http_service.concurrency]
     type = 'connections'
