--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ TWITCH_REDIRECT_URI=http://localhost:4000/auth/twitch/callback
 TWITCH_WEBHOOK_CALLBACK_URL=http://localhost:4000/webhooks/twitch
 TWITCH_WEBHOOK_SECRET=your_webhook_secret
 
+# Twitch Extension (get from Twitch Developer Console - Extension Secrets)
+# IMPORTANT: This should be the base64-encoded secret provided by Twitch
+TWITCH_EXTENSION_SECRET=your_base64_encoded_extension_secret
+
 # Database (production)
 POSTGRES_DATABASE=premiere_ecoute_prod
 POSTGRES_USERNAME=postgres
