--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:latest
+    image: postgres:17.6
     container_name: postgres
     environment:
       POSTGRES_DB: premiere_ecoute
@@ -10,10 +10,9 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init:/docker-entrypoint-initdb.d/
 
   prometheus:
-    image: prom/prometheus:latest
+    image: prom/prometheus:v3.7.2
     container_name: prometheus
     network_mode: host
     volumes:
@@ -24,7 +23,7 @@ services:
       - "9090:9090"
 
   grafana:
-    image: grafana/grafana
+    image: grafana/grafana:12.2
     container_name: grafana
     network_mode: host
     ports:
