Fix Phoenix server not starting in production deployment
This fixes the Bad Gateway error on Digital Ocean by ensuring the Phoenix HTTP server actually starts when the application is deployed.

## Bugs

- Add PHX_SERVER=true to production environment configuration to start the HTTP server
- Fix heredoc delimiter (ENVEOF → EOF) for consistency with previous commits

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,47 +96,48 @@ jobs:
 
       - name: Create .env.production file
         run: |
-          cat > .env.production << ENVEOF
+          cat > .env.production <<EOF
           # Phoenix
-          PHX_HOST=${PHX_HOST}
+          PHX_HOST=$PHX_HOST
+          PHX_SERVER=true
           PORT=4000
-          SECRET_KEY_BASE=${SECRET_KEY_BASE}
+          SECRET_KEY_BASE=$SECRET_KEY_BASE
           MIX_ENV=prod
 
           # Database
-          POSTGRES_DATABASE=${POSTGRES_DATABASE}
-          POSTGRES_USERNAME=${POSTGRES_USERNAME}
-          POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+          POSTGRES_DATABASE=$POSTGRES_DATABASE
+          POSTGRES_USERNAME=$POSTGRES_USERNAME
+          POSTGRES_PASSWORD=$POSTGRES_PASSWORD
           POSTGRES_HOSTNAME=localhost
-          POSTGRES_ENCRYPTION_KEY=${POSTGRES_ENCRYPTION_KEY}
+          POSTGRES_ENCRYPTION_KEY=$POSTGRES_ENCRYPTION_KEY
 
           # Spotify API
-          SPOTIFY_CLIENT_ID=${SPOTIFY_CLIENT_ID}
-          SPOTIFY_CLIENT_SECRET=${SPOTIFY_CLIENT_SECRET}
-          SPOTIFY_REDIRECT_URI=${SPOTIFY_REDIRECT_URI}
+          SPOTIFY_CLIENT_ID=$SPOTIFY_CLIENT_ID
+          SPOTIFY_CLIENT_SECRET=$SPOTIFY_CLIENT_SECRET
+          SPOTIFY_REDIRECT_URI=$SPOTIFY_REDIRECT_URI
 
           # Tidal API
-          TIDAL_CLIENT_ID=${TIDAL_CLIENT_ID}
-          TIDAL_CLIENT_SECRET=${TIDAL_CLIENT_SECRET}
+          TIDAL_CLIENT_ID=$TIDAL_CLIENT_ID
+          TIDAL_CLIENT_SECRET=$TIDAL_CLIENT_SECRET
 
           # Twitch API
-          TWITCH_CLIENT_ID=${TWITCH_CLIENT_ID}
-          TWITCH_CLIENT_SECRET=${TWITCH_CLIENT_SECRET}
-          TWITCH_REDIRECT_URI=${TWITCH_REDIRECT_URI}
-          TWITCH_WEBHOOK_CALLBACK_URL=${TWITCH_WEBHOOK_CALLBACK_URL}
-          TWITCH_EXTENSION_SECRET=${TWITCH_EXTENSION_SECRET}
+          TWITCH_CLIENT_ID=$TWITCH_CLIENT_ID
+          TWITCH_CLIENT_SECRET=$TWITCH_CLIENT_SECRET
+          TWITCH_REDIRECT_URI=$TWITCH_REDIRECT_URI
+          TWITCH_WEBHOOK_CALLBACK_URL=$TWITCH_WEBHOOK_CALLBACK_URL
+          TWITCH_EXTENSION_SECRET=$TWITCH_EXTENSION_SECRET
 
           # Other APIs
-          DISCORD_BOT_TOKEN=${DISCORD_BOT_TOKEN}
-          BUYMEACOFFEE_API_KEY=${BUYMEACOFFEE_API_KEY}
-          RESEND_API_KEY=${RESEND_API_KEY}
-          OPENAI_API_KEY=${OPENAI_API_KEY}
-          SENTRY_DSN=${SENTRY_DSN}
+          DISCORD_BOT_TOKEN=$DISCORD_BOT_TOKEN
+          BUYMEACOFFEE_API_KEY=$BUYMEACOFFEE_API_KEY
+          RESEND_API_KEY=$RESEND_API_KEY
+          OPENAI_API_KEY=$OPENAI_API_KEY
+          SENTRY_DSN=$SENTRY_DSN
 
           # Feature Flags Auth
-          AUTH_USERNAME=${AUTH_USERNAME}
-          AUTH_PASSWORD=${AUTH_PASSWORD}
-          ENVEOF
+          AUTH_USERNAME=$AUTH_USERNAME
+          AUTH_PASSWORD=$AUTH_PASSWORD
+          EOF
         env:
           PHX_HOST: ${{ secrets.PHX_HOST }}
           SECRET_KEY_BASE: ${{ secrets.SECRET_KEY_BASE }}
