--- a/priv/grafana/provisioning/datasources/prometheus.yml
+++ b/priv/grafana/provisioning/datasources/prometheus.yml
@@ -2,9 +2,9 @@ apiVersion: 1
 
 datasources:
   - name: Prometheus
-    uid: prometheus
+    uid: grafanacloud-mjanv-prom
     type: prometheus
     access: proxy
-    url: http://localhost:9090
+    url: http://prometheus:9090
     isDefault: true
     editable: false
