refactor: move docs build/deploy from main branch to weekly schedule
Move documentation generation and deployment out of the main production deployment workflow to run on a weekly schedule instead (Mondays at 04:00 UTC). This decouples doc updates from production releases and reduces CI overhead on every push to main.

## Improvements

- Remove `deploy-docs` job from main.yml (runs on every push)
- Update elixir.yml to trigger on weekly schedule instead of on push
- Remove unnecessary GitHub Pages permissions from main.yml
- Align Elixir/OTP versions in elixir.yml with rest of CI (1.19.0-otp-28)

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -1,9 +1,8 @@
 name: Generate and Deploy Docs
 
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: '0 4 * * 1'
   workflow_dispatch:
 
 permissions:
@@ -22,8 +21,8 @@ jobs:
       - name: Set up Elixir and Erlang
         uses: erlef/setup-beam@v1
         with:
-          elixir-version: '1.18.4'
-          otp-version: '28.0.1'
+          elixir-version: '1.19.0-otp-28'
+          otp-version: '28.1'
 
       - name: Install dependencies
         run: mix deps.get
